--- a/TestModule/TestModule.vcxproj.filters
+++ b/TestModule/TestModule.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClCompile Include="..\TestORB\module\IDL\ValueBox_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
+    <ClCompile Include="..\TestORB\module\I1_factory_sysdomain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\TestORB\module\DynamicI1.h">
@@ -286,6 +289,9 @@
     </ClInclude>
     <ClInclude Include="..\TestORB\module\IDL\ValueBox_s.h">
       <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\include\I1_factory_sysdomain.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
