--- a/TestProcess/TestProcess.vcxproj
+++ b/TestProcess/TestProcess.vcxproj
@@ -615,6 +615,7 @@
   <ItemGroup>
     <ClInclude Include="..\TestORB\include\I1_factory_dynamic.h" />
     <ClInclude Include="..\TestORB\include\I1_factory_portable.h" />
+    <ClInclude Include="..\TestORB\include\I1_factory_sysdomain.h" />
     <ClInclude Include="..\TestORB\include\I1_factory_tied.h" />
     <ClInclude Include="..\TestORB\include\I1_static.h" />
     <ClInclude Include="..\TestORB\include\I2_factory_impl.h" />
