--- a/TestProcess/TestProcess.vcxproj.filters
+++ b/TestProcess/TestProcess.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="..\TestORB\process\TestORB_I1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\TestORB\include\I1_factory_sysdomain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\TestORB\idl\Test_I1.idl">
