--- a/TestModule/TestModule.vcxproj
+++ b/TestModule/TestModule.vcxproj
@@ -404,6 +404,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release 2019|x64'">NIRVANA_MODULE;LEGACY_CORBA_CPP;NDEBUG;TESTMODULE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release 2022|x64'">NIRVANA_MODULE;LEGACY_CORBA_CPP;NDEBUG;TESTMODULE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="..\TestORB\module\I2_factory_dynamic.cpp" />
     <ClCompile Include="..\TestORB\module\I3_factory_dynamic.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug 2019|x64'">NIRVANA_MODULE;LEGACY_CORBA_CPP;_DEBUG;TESTMODULE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug 2022|x64'">NIRVANA_MODULE;LEGACY_CORBA_CPP;_DEBUG;TESTMODULE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -491,12 +492,14 @@
     <ClInclude Include="..\TestORB\include\I1_factory_sysdomain.h" />
     <ClInclude Include="..\TestORB\include\I1_factory_tied.h" />
     <ClInclude Include="..\TestORB\include\I1_static.h" />
+    <ClInclude Include="..\TestORB\include\I2_factory_dynamic.h" />
     <ClInclude Include="..\TestORB\include\I3_factory_dynamic.h" />
     <ClInclude Include="..\TestORB\include\I3_factory_portable.h" />
     <ClInclude Include="..\TestORB\include\I3_factory_tied.h" />
     <ClInclude Include="..\TestORB\include\I3_static.h" />
-    <ClInclude Include="..\TestORB\include\I2_factory_impl.h" />
+    <ClInclude Include="..\TestORB\include\I2_factory_V3.h" />
     <ClInclude Include="..\TestORB\module\DynamicI1.h" />
+    <ClInclude Include="..\TestORB\module\DynamicI2.h" />
     <ClInclude Include="..\TestORB\module\DynamicI3.h" />
     <ClInclude Include="..\TestORB\module\IDL\RecursiveStruct.h" />
     <ClInclude Include="..\TestORB\module\IDL\RecursiveStruct_s.h" />
@@ -523,8 +526,10 @@
     <ClInclude Include="..\TestORB\module\IDL\ValueBox.h" />
     <ClInclude Include="..\TestORB\module\IDL\ValueBox_s.h" />
     <ClInclude Include="..\TestORB\module\ImplI1.h" />
+    <ClInclude Include="..\TestORB\module\ImplI2.h" />
     <ClInclude Include="..\TestORB\module\ImplI3.h" />
     <ClInclude Include="..\TestORB\module\PortableI1.h" />
+    <ClInclude Include="..\TestORB\module\PortableI2.h" />
     <ClInclude Include="..\TestORB\module\PortableI3.h" />
   </ItemGroup>
   <ItemGroup>
