--- a/TestModule/TestModule.vcxproj.filters
+++ b/TestModule/TestModule.vcxproj.filters
@@ -171,6 +171,9 @@
     <ClCompile Include="..\TestORB\module\I1_factory_sysdomain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\TestORB\module\I2_factory_dynamic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\TestORB\module\DynamicI1.h">
@@ -215,7 +218,7 @@
     <ClInclude Include="..\TestORB\module\ImplI3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\TestORB\include\I2_factory_impl.h">
+    <ClInclude Include="..\TestORB\include\I2_factory_V3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\TestORB\module\IDL\RecursiveStruct.h">
@@ -291,6 +294,18 @@
       <Filter>Generated</Filter>
     </ClInclude>
     <ClInclude Include="..\TestORB\include\I1_factory_sysdomain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\module\DynamicI2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\module\ImplI2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\include\I2_factory_dynamic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\module\PortableI2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
