--- a/TestProcess/TestProcess.vcxproj
+++ b/TestProcess/TestProcess.vcxproj
@@ -618,7 +618,8 @@
     <ClInclude Include="..\TestORB\include\I1_factory_sysdomain.h" />
     <ClInclude Include="..\TestORB\include\I1_factory_tied.h" />
     <ClInclude Include="..\TestORB\include\I1_static.h" />
-    <ClInclude Include="..\TestORB\include\I2_factory_impl.h" />
+    <ClInclude Include="..\TestORB\include\I2_factory_dynamic.h" />
+    <ClInclude Include="..\TestORB\include\I2_factory_V3.h" />
     <ClInclude Include="..\TestORB\include\I3_factory_dynamic.h" />
     <ClInclude Include="..\TestORB\include\I3_factory_portable.h" />
     <ClInclude Include="..\TestORB\include\I3_factory_tied.h" />
