--- a/TestProcess/TestProcess.vcxproj.filters
+++ b/TestProcess/TestProcess.vcxproj.filters
@@ -96,9 +96,6 @@
     <ClInclude Include="..\TestORB\include\I3_static.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\TestORB\include\I2_factory_impl.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\TestORB\process\TestORB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -142,6 +139,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\TestORB\include\I1_factory_sysdomain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\include\I2_factory_dynamic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\include\I2_factory_V3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
