--- a/TestModule/TestModule.vcxproj
+++ b/TestModule/TestModule.vcxproj
@@ -419,6 +419,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release 2022|x64'">NIRVANA_MODULE;LEGACY_CORBA_CPP;NDEBUG;TESTMODULE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug 2022|x64'">NIRVANA_MODULE;LEGACY_CORBA_CPP;_DEBUG;TESTMODULE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="..\TestORB\module\I2_factory_sysdomain.cpp" />
     <ClCompile Include="..\TestORB\module\I3_factory_dynamic.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug 2019|x64'">NIRVANA_MODULE;LEGACY_CORBA_CPP;_DEBUG;TESTMODULE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug 2022|x64'">NIRVANA_MODULE;LEGACY_CORBA_CPP;_DEBUG;TESTMODULE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -522,6 +523,7 @@
     <ClInclude Include="..\TestORB\include\I1_factory_tied.h" />
     <ClInclude Include="..\TestORB\include\I1_static.h" />
     <ClInclude Include="..\TestORB\include\I2_factory_dynamic.h" />
+    <ClInclude Include="..\TestORB\include\I2_factory_sysdomain.h" />
     <ClInclude Include="..\TestORB\include\I3_factory_dynamic.h" />
     <ClInclude Include="..\TestORB\include\I3_factory_portable.h" />
     <ClInclude Include="..\TestORB\include\I3_factory_tied.h" />
